--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 		<meta name="description" content=" Yah's Cuisine Healthy and delicous Soul Vegetarian">
 		<meta name="keywords" content=" Yah's Cuisine, Vegan, Vegetarian, Soul Vegetarian">
 		<meta name="author" content="Miranda Johnson">
-		<link href='http://fonts.googleapis.com/css?family=Noto+Serif|Elsie+Swash+Caps|Libre+Baskerville|Kavoon' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="css/normalize.css"/>
+		<link href='http://fonts.googleapis.com/css?family=Maven+Pro:500|Leckerli+One|Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/base.css"/>
 		<link rel="stylesheet" href="css/grid.css"/>
 		<link rel="stylesheet" href="css/style.css"/>
