--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
  <div class="container">
+ <div id="wrapper">
 	<header class="grid_12">
 		<nav>
 			<ul>
@@ -39,7 +40,7 @@
 	</section>
 	<section class="grid_12">
 	<h3>Social Networks</h3>
-	<p><A href="https://www.facebook.com/pages/Yahs-Cuisine-Vegan-Soul-Food/">Facebook</A><A href="https://foursquare.com/v/yahs/4e7a46f0d22d391717feea50"> Foursquare</A> <A href="http://www.yelp.com/biz/yahs-cuisine-chicago"> Yelp</A> <A href="https://plus.google.com/110662820558006881872/">Google Plus </A></p>
+	<p><A href="https://www.facebook.com/pages/Yahs-Cuisine-Vegan-Soul-Food/"><img src="images/facebook.jpg" width="70" height="70" alt="Like Our facebook page"></A><A href="https://foursquare.com/v/yahs/4e7a46f0d22d391717feea50"> Foursquare</A> <A href="http://www.yelp.com/biz/yahs-cuisine-chicago"> Yelp</A> <A href="https://plus.google.com/110662820558006881872/">Google Plus </A></p>
 	</section>
 	</article>
 	<footer class="grid_12"> &copy; Yah's Cuisine FrameWork Assignment 2013</footer>
