--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 	</section>
 	<section class="grid_12">
 	<h3>Social Networks</h3>
-	<p><A href="https://www.facebook.com/pages/Yahs-Cuisine-Vegan-Soul-Food/"><img src="images/facebook.jpg" width="70" height="70" alt="Like Our facebook page"></A><A href="https://foursquare.com/v/yahs/4e7a46f0d22d391717feea50"> Foursquare</A> <A href="http://www.yelp.com/biz/yahs-cuisine-chicago"> Yelp</A> <A href="https://plus.google.com/110662820558006881872/">Google Plus </A></p>
+	<p><A href="https://www.facebook.com/pages/Yahs-Cuisine-Vegan-Soul-Food/"><img src="images/facebook.jpg" width="50" height="50" alt="Like Our facebook page"></A>
+	<A href="http://www.twitter.com/"><img src="images/twitter.jpg" width="50" height="50" alt="Like Our facebook page"></a>
+	<A href="http://www.linkedin.com/"><img src="images/linkedin.jpg" width="50" height="50" alt="Like Our facebook page"></a>>
 	</section>
 	</article>
 	<footer class="grid_12"> &copy; Yah's Cuisine FrameWork Assignment 2013</footer>
