--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 	<section class="grid_12">
 	<h3>Social Networks</h3>
 	<p><A href="https://www.facebook.com/pages/Yahs-Cuisine-Vegan-Soul-Food/"><img src="images/facebook.jpg" width="50" height="50" alt="Like Our facebook page"></A>
-	<A href="http://www.twitter.com/"><img src="images/twitter.jpg" width="50" height="50" alt="Like Our facebook page"></a>
-	<A href="http://www.linkedin.com/"><img src="images/linkedin.jpg" width="50" height="50" alt="Like Our facebook page"></a>>
+	<A href="http://www.twitter.com/"><img src="images/twitter.jpg" width="50" height="50" alt="follow us on Twitter"></a>
+	<A href="http://www.linkedin.com/"><img src="images/linkedin.jpg" width="50" height="50" alt="follow us on linked In"></a>
 	</section>
 	</article>
 	<footer class="grid_12"> &copy; Yah's Cuisine FrameWork Assignment 2013</footer>
