--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 				<li><a href="shop.html">Shop</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
-		</nav>	
+		</nav>
 	</header>
+	<a href="http://www.yahscuisine.com"><img src="images/Yahs_logo.png" width="433" height="240" alt="Yah's Cuisine Logo"></a>	
 	<article class="grid_11">
 	<h1>Yah's Cuisine</h1>
 	<section class="grid_12">
