--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
  <div class="container">
- <div id="wrapper">
+ <wrapper class="grid_12">
 	<header class="grid_12">
 		<nav>
 			<ul>
@@ -28,7 +28,9 @@
 			</ul>
 		</nav>
 	</header>
-	<a href="http://www.yahscuisine.com"><img src="images/Yahs_logo.png" width="433" height="240" alt="Yah's Cuisine Logo"></a>	
+	<logo class="grid_12">
+	<a href="http://www.yahscuisine.com"><img src="images/Yahs_logo.png" width="433" height="240" alt="Yah's Cuisine Logo"></a>
+	</logo>	
 	<article class="grid_11">
 	<h1>Yah's Cuisine</h1>
 	<section class="grid_12">
@@ -47,6 +49,7 @@
 	</section>
 	</article>
 	<footer class="grid_12"> &copy; Yah's Cuisine FrameWork Assignment 2013</footer>
+	</wrapper>
 	</div>
 	</body>
 </html>
