--- a/menu.html
+++ b/menu.html
@@ -28,6 +28,9 @@
 			</ul>
 		</nav>	
 	</header>
+	<logo class="grid_12">
+	<a href="http://www.yahscuisine.com"><img src="images/Yahs_logo.png" width="433" height="240" alt="Yah's Cuisine Logo"></a>
+	</logo>	
 	<article class="grid_12 alpha">
 	<h1>Yah's Cuisine</h1>
 	<section class="grid_10">
