--- a/blog.html
+++ b/blog.html
@@ -34,41 +34,53 @@
 	<article class="grid_12">
 	<h1>Yah's Cuisine</h1>
 	<section class="grid_12">
-	<h2>Events</h2>
+	<h2>Blog</h2>
 	</section>
 	<section class="grid_12">
-	<h3> Annual Toy Drive</h3>
-	<p> <img src="images/toy_drive.jpg" width="200" height="200" alt="Yah's Cuisine">This year we will participate in the 
-	The WGN Morning News Drive-Thru Toy Drive will be celebrating its 11th year; its fourth tied to Jennifer Hudson.  
-	You may drop off your toys here in the store and all toys will be sent to WGN-TV is located at 2501 W. Bradley Place, 
-	Chicago, IL 60618. Please help us make Christmas brighter for the youth.
+	<h3>Green Juice for Wellness</h3>
+	<p> <img src="images/green-juice.jpg" width="300" height="200" alt="Yah's Cuisine">Green juices are a great way to get in your recommended servings of fresh produce, especially if you have a hard time fitting in loads of 
+	broccoli, kale, collards, or cucumbers in your everyday diet. Most green juices pack two servings of fruits and veggies into each bottle, so they're a healthy way to sneak in nutrients if you've been slacking on salads 
+	lately. But keep in mind that juicing does strip produce of dietary fiber, which is found in the pulp and skin of produce and aids in digestion, regulates blood sugar levels, and keeps you feeling full longer. So whole 
+	foods are still the optimal way to ensure you're getting plenty of fiber in your diet.
 	</p>
-	<p class="grid_3"><a href="#details">Event Details</a></p>
+	<p><a href="#details">Read More</a></p>
 	</section>
-	<section class="grid_12">
-	<h3> January Vegan Workshop</h3>
-	<p> <img src="images/vegan_workshop.jpg" width="200" height="200" alt="Yah's Cuisine">This workshop is for anyone even remotely curious about vegan or raw cuisine. We also
-	 welcome those just looking for a few healthy tips to make their food healthier. This is a three day workshop full of fun, new food and excitment. We will have guess
-	 cooks share some of their favorite recipes, cooking demonstrations, a raffle and also a booklet for you to take home.
+	<section class="grid_10">
+	<h3>10 ways to use coconut oil</h3>
+	<p> <img src="images/coconut.jpg" width="300" height="200" alt="Yah's Cuisine">1.Cooking Oil Substitute 2.Insect Repellent 3.Deodorant 4.Makeup Remover 5.Toothpaste 6.Lip Balm 7.Dandruff Relief 8.Coffee Creamer 9.Butter substitute
+	10. Moisturizer
 	</p>
-	<p class="grid_3"><a href="#details">Event Details</a></p>
-	</section>
-	<section class="grid_12">
-	<h3>Department of Health Wellness Check up</h3>
-	<p><img src="images/health_fair.jpg" width="200" height="200"alt="Yah's Cuisine"> We are helping making Chicago healthier by doing more then serving good food. We will
-	be holding a wellness workhop in partnership with the city of Chicago. The City of Chicago focus on Chicagoans Health and Wellness, our goal is to make Chicago 
-	“The Healthiest City in the U.S.”  The City of Chicago works with community partners, internal departments to promote health, prevent disease, reduce environmental 
-	hazards and insure access to health care for all Chicagoans.
+	<p><a href="#details">Read More</a></p>
+	 </section>
+	 <section class="grid_12">
+	<h3>Try Tumeric for healthy glowing flawless skin</h3>
+	<p><img src="images/tumeric.jpg" width="300" height="200" alt="Yah's Cuisine"> The skin is the outermost layer of the body that is often easily damaged by environmental factors as well as stress and poor eating habits. 
+	Although there is a wide market for cosmetic products that offers to improve skin problems, nature also provides a solution to these. 
+	Natural treatments for skin that give lasting results are often better than expensive commercial products and cosmetic procedures. 
+	One such natural treatment is turmeric powder for skin.
 	</p>
-    <p class="grid_3"><a href="#details">Event Details</a></p>
-    </section>
-	<section class="grid_12">
-	<h3>5k Walk for Cancer</h3>
-	<p><img src="images/cancer_walk.jpg" width="200" height="200" alt="Yah's Cuisine"> Derrick is a 32 year old male who is single with one child. He lives around the corner from the restaurant and was raised on soul food.
-	Derrick does not cook and usually eats at a restaurant daily. As an athletic and health conscious individual Derrick enjoys eating foods that 
-	are delicious and nutritious.  
+	<p><a href="#details">Read More</a></p>
+	 </section>
+	 <section class="grid_12">
+	<h3>Try this for a morning pick me up</h3>
+	<p><img src="images/morning.jpg" width="300" height="200" alt="Yah's Cuisine">In my quest for an ingestible, natural energy booster that would work almost as well as my favorite activity-based energy boosters—going for a 
+	walk or bouncing on a big exercise ball—I happily discovered several great replacements for caffeine, with no nasty side effects when used properly. My top 3 are listed here.
+
+	1. Ginger. This incredible root has a long and storied history as a natural digestive aid. And those of you who have suffered emotional stress and fatigue know that a malfunctioning digestive tract is u
+	sually either the cause of such stress and fatigue or the result of it. Ginger, by helping ease the digestive process, helps us remain alert. I can also tell you from experience (and with the confirmation 
+	of my favorite Chinese herbalist) that ginger speeds up our metabolism and circulation, not just our digestion. A single cup of fresh ginger-root tea can seriously make you sweat! I shave off several thin slices 
+	from a fresh, organic root, and steep it in boiling water for 5-10 minutes. If I am running really low, I’ll chew the slices afterward, too. If you tend to run hot or have a metabolic disorder, please be careful. 
+	A tiny amount of ginger is all any of us needs to get the energy boost we’re after: You really can get too much of a good thing when it comes to ginger.
 	</p>
-	<p class="grid_3"><a href="#details">Event Details</a></p>
+	<p><a href="#details">Read More</a></p>
+	 </section>
+	 <section class="grid_12">
+	<h3>20 foods that kick cancers butt</h3>
+	<p><img src="images/kale.jpg" width="300" height="200" alt="Yah's Cuisine"> 1.Spinach 2.Kale 3.Collard greens 4.Arugula 5.Dandelion greens 6.Curry 7.Broccoli 8.Broccoli sprouts 9.Cabbage 10.Bok choy 11.Cauliflower 12.Watercress
+	13.Swiss chard 14.Blueberries 15.Blackberries 16.Raspberries 17.Strawberries 18.Cranberries 19.Red grapes 20.Tomatoes
+
+	</p>
+	<p id="details"><a href="#details">Read More</a></p>
 	</section>
 	</article>
 	<section class="grid_12">
