--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width"/>
-		<title>Yah's Cuisine.com  Frame Work Assignment</title>
+		<title>Yah's Cuisine.com  Beta</title>
 		<meta name="description" content=" Yah's Cuisine Healthy and delicous Soul Vegetarian">
 		<meta name="keywords" content=" Yah's Cuisine, Vegan, Vegetarian, Soul Vegetarian">
 		<meta name="author" content="Miranda Johnson">
@@ -18,7 +18,7 @@
  <wrapper class="grid_12">
 	<header class="grid_12">
 		<nav>
-			<ul class="grid_6">
+			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="menu.html">Menu</a></li>
 				<li><a href="event.html">Events</a></li>
@@ -26,7 +26,7 @@
 				<li><a href="shop.html">Shop</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
-		</nav>	
+		</nav>
 	</header>
 	<logo class="grid_12">
 	<a href="http://www.yahscuisine.com"><img src="images/Yahs_logo.png" width="433" height="240" alt="Yah's Cuisine Logo"></a>
