--- a/event.html
+++ b/event.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width"/>
-		<title>Yah's Cuisine.com  Frame Work Assignment</title>
+		<title>Yah's Cuisine.com  Beta</title>
 		<meta name="description" content=" Yah's Cuisine Healthy and delicous Soul Vegetarian">
 		<meta name="keywords" content=" Yah's Cuisine, Vegan, Vegetarian, Soul Vegetarian">
 		<meta name="author" content="Miranda Johnson">
