contact img float none

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 	<h2>Contact Us</h2>
 	</section>
 	<section class="grid_6 alpha">
-		<img src="images/yahs.jpg" alt="Yah's Cuisine"></p>
+		<p id="contact"><img src="images/yahs.jpg" alt="Yah's Cuisine"></p>
 		<p><br>Address: 2347 E 75th St<br>
 		       City: Chicago, IL 60649<br>
 			   Phone:(773) 359-7988<br>
