--- a/contact.html
+++ b/contact.html
@@ -39,9 +39,13 @@
 	</section>
 	<section class="grid_6 alpha">
 		<p id="contact"><img src="images/yahs.jpg" alt="Yah's Cuisine"></p>
+		</section
+		<section class="grid_6 alpha">
 		<p><br>Address: 2347 E 75th St<br>
 		       City: Chicago, IL 60649<br>
 			   Phone:(773) 359-7988<br>
+			   </section>
+			   <section class="grid_6 alpha">
 			   Hours: 
 			   Monday	Closed<br>
 			   Tuesday	12:00–7:00 pm<br>
