--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,9 @@
 	<a href="http://www.yahscuisine.com"><img src="images/Yahs_logo.png" width="433" height="240" alt="Yah's Cuisine Logo"></a>
 	</logo>	
 	
-	<article class="grid_12" >
-	<h1>Yah's Cuisine</h1>
-    <section class="grid_12">	
-	<h2>Contact Us</h2>
+	<article class="grid_12 alpha" >
+    <section class="grid_12 alpha">	
+	<h1>Contact Us</h1>
 	</section>
 	<section class="grid_6 alpha">
 		<p id="contact"><img src="images/yahs.jpg" alt="Yah's Cuisine"></p>
