moved section end
moved section end

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,6 @@
 	<article class="grid_12 alpha" >
     <section class="grid_12 alpha">	
 	<h1>Contact Us</h1>
-	</section>
 	<section class="grid_6 alpha">
 		<p id="contact"><img src="images/yahs.jpg" alt="Yah's Cuisine"></p>
 		</section
@@ -43,15 +42,14 @@
 		<p><br>Address: 2347 E 75th St<br>
 		       City: Chicago, IL 60649<br>
 			   Phone:(773) 359-7988<br>
-			   </p><p>
-			   Hours: 
+			   Hours: <br>
 			   Monday	Closed<br>
-			   Tuesday	12:00–7:00 pm<br>
-			   Wednesday12:00–7:00 pm<br>
-			   Thursday	12:00–7:00 pm<br>
-			   Friday	12:00–7:00 pm<br>
-			   Saturday	12:00–7:00 pm<br>
- 			   Sunday	12:00–7:00 pm<br>
+			   Tuesday	12:00–7:00 p.m.<br>
+			   Wednesday12:00–7:00 p.m.<br>
+			   Thursday	12:00–7:00 p.m.<br>
+			   Friday	12:00–7:00 p.m.<br>
+			   Saturday	12:00–7:00 p.m.<br>
+ 			   Sunday	12:00–7:00 p.m.<br>
  			</p>
             </section>
 	  <section class="grid_6 omega">
@@ -86,6 +84,7 @@
         <div>
         </div>
 	</p>
+	</section>
 	</section>
 	</article>
 	<footer class="grid_12"> &copy; Yah's Cuisine FrameWork Assignment 2013</footer>
