--- a/shop.html
+++ b/shop.html
@@ -42,12 +42,14 @@
 	<p>Feeds 10- 15 served with your choice of two sides and desert.
 	<p id="alphaprice"><a href="#details">$15.00</a>
 	 </section>
+	 <article class="grid_6 alpha">
 	<secton class="grid_6 alpha">
 	<h3>Bar B Que Potroast</h3>
 	<p><img src="images/barbQue_potroast.jpg" width="200" height="200" alt="Yah's Cuisine">
 	Feeds 10- 15 served with your choice of two sides and desert.</p>
 	<p id="alphaprice"><a href="#details">$15.00</a></p>
 	 </section>
+	 <article class="grid_6 alpha">
 	<secton class="grid_6 alpha">
 	<h3> Mixed Veggies</h3>
 	<p> <img src="images/mixed_veggies.jpg" width="200" height="200" alt="Yah's Cuisine">
