--- a/shop.html
+++ b/shop.html
@@ -35,6 +35,7 @@
 	<section class="grid_12">
 	<h1>Shop</h1>
 	</section>
+	<article class="grid_6 alpha">
 	<section class="grid_6 alpha">
 	<h3> Vegan Ribtips</h3>
 	<p><img src="images/Vegan_ribtips.jpg" alt="Yah's Cuisine" width="200" height="200" align="baseline">    
@@ -53,6 +54,7 @@
 	Feeds 10-15 people served with desert.</p>
 	 <p id="alphaprice"><a href="#details">$15.00</a></p>
 	 </section>
+	<article class="grid_6 omega">
 	<secton class="grid_6 omega">
 	<h3> Cutlet and Kale</h3>
 	<p><img src="images/Cutlet.jpg" width="200" height="200" alt="Yah's Cuisine"> Served with your choice of two sides and a biscuit.</p>
