--- a/shop.html
+++ b/shop.html
@@ -53,6 +53,8 @@
 	Feeds 10-15 people served with desert.</p>
 	 <p id="alphaprice"><a href="#details">$15.00</a></p>
 	 </section>
+	 </article>
+	 
 	<secton class="grid_6 omega">
 	<h3> Cutlet and Kale</h3>
 	<p><img src="images/Cutlet.jpg" width="200" height="200" alt="Yah's Cuisine"> Served with your choice of two sides and a biscuit.</p>
