--- a/shop.html
+++ b/shop.html
@@ -43,32 +43,31 @@
 	<p id="alphaprice"><a href="#details">$15.00</a>
 	 </section>
 	 <article class="grid_6 alpha">
-	<secton class="grid_6 alpha">
+	<section class="grid_6 alpha">
 	<h3>Bar B Que Potroast</h3>
 	<p><img src="images/barbQue_potroast.jpg" width="200" height="200" alt="Yah's Cuisine">
 	Feeds 10- 15 served with your choice of two sides and desert.</p>
 	<p id="alphaprice"><a href="#details">$15.00</a></p>
 	 </section>
 	 <article class="grid_6 alpha">
-	<secton class="grid_6 alpha">
+	<section class="grid_6 alpha">
 	<h3> Mixed Veggies</h3>
 	<p> <img src="images/mixed_veggies.jpg" width="200" height="200" alt="Yah's Cuisine">
 	Feeds 10-15 people served with desert.</p>
 	 <p id="alphaprice"><a href="#details">$15.00</a></p>
 	 </section>
-	<article class="grid_6 omega">
-	<secton class="grid_6 omega">
+	<section class="grid_6 omega">
 	<h3> Cutlet and Kale</h3>
 	<p><img src="images/Cutlet.jpg" width="200" height="200" alt="Yah's Cuisine"> Served with your choice of two sides and a biscuit.</p>
 	<p id="omegaprice"><a href="#details">$15.00</a></p>
 	 </section>
-	<secton class="grid_6 omega">
+	<section class="grid_6 omega">
 	<h3>Blackbean Flatbread Sandwich</h3>
 	<p><img src="images/blackbean_flatbread_sandwich.jpg" width="200" height="200" alt="Yah's Cuisine"> 
 	Served with Kale salad and Tumeric and ginger tonic</p>
 	 <p id="omegaprice"><a href="#details">$15.00</a></p>
 	 </section>
-	<secton class="grid_6 omega">
+	<section class="grid_6 omega">
 	<h3>Flatbread Bar B Que Chicken Roast</h3>
 	<p><img src="images/Flatbread_BarBQue_Chickenroast.jpg" width="200" height="200" alt="Yah's Cuisine">
 	Served with Kale salad and Tumeric and ginger tonic</p>
@@ -77,10 +76,9 @@
 	</article>
 	
 	<article class="grid_12 alpha">
-	<h2 class="grid_12 alpha">Featured</h2>
-		
+	<h2 class="grid_12 alpha">Featured</h2>	
 	<article class="grid_6 alpha">
-	<secton class="grid_5 alpha">
+	<section class="grid_5 alpha">
 	<h3> Game Night Feast</h3>
 	<p><img src="images/game_night.jpg" width="200" height="200"> Game night success with a feast fit for a king.
 	An assortment of our favorites plus desert. Feeds 8- 10 people. </p>
@@ -89,7 +87,7 @@
 	</article>
 	
 	<article class="grid_6 omega">
-	<secton class="grid_5 omega">
+	<section class="grid_5 omega">
 	<h3> Weekend Stash</h3>
 	<p> <img src="images/weekend_stash.jpg" width="200" height="200"> An assortment of our favorites plus desert
 	and a health tonic of your choice. Feeds 10- 15 people for two days. </p>
