--- a/menu.html
+++ b/menu.html
@@ -31,8 +31,8 @@
 	<logo class="grid_12">
 	<a href="http://www.yahscuisine.com"><img src="images/Yahs_logo.png" width="433" height="240" alt="Yah's Cuisine Logo"></a>
 	</logo>	
-	<article class="grid_12 alpha">
-	<section class="grid_12 alpha">
+	<article class="grid_12">
+	<section class="grid_12">
 	<h1>Menu</h1>
 	</section>
 	<article class="grid_6 alpha">
