added article back
added article back

--- a/menu.html
+++ b/menu.html
@@ -35,6 +35,7 @@
 	<section class="grid_12">
 	<h1>Menu</h1>
 	</section>
+	<article class="grid_6 alpha">
 	<section class="grid_6 alpha">
 	<h3> Vegan Ribtips</h3>
 	<img src="images/Vegan_ribtips.jpg" width="200" height="200" alt="Yah's Cuisine">
