--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 	</section>
 	<section class="grid_12">
 	<h3>Social Networks</h3>
-	<p><A href="https://www.facebook.com/pages/Yahs-Cuisine-Vegan-Soul-Food/"><img src="images/facebook.jpg" width="40" height="40" alt="Like Our facebook page"></A>
-	<A href="http://www.twitter.com/"><img src="images/twitter.jpg" width="40" height="40" alt="follow us on Twitter"></a>
-	<A href="http://www.linkedin.com/"><img src="images/linkedin.jpg" width="45" height="45" alt="follow us on linked In"></a>
+	<p><A href="https://www.facebook.com/pages/Yahs-Cuisine-Vegan-Soul-Food/"><img src="images/facebook.png" width="40" height="40" alt="Like Our facebook page"></A>
+	<A href="http://www.twitter.com/"><img src="images/twitter.png" width="40" height="40" alt="follow us on Twitter"></a>
+	<A href="http://www.linkedin.com/"><img src="images/linkedin.png" width="45" height="45" alt="follow us on linked In"></a>
 	</section>
 	</article>
 	<footer class="grid_12"> &copy; Yah's Cuisine FrameWork Assignment 2013</footer>
