--- a/menu.html
+++ b/menu.html
@@ -31,8 +31,8 @@
 	<logo class="grid_12">
 	<a href="http://www.yahscuisine.com"><img src="images/Yahs_logo.png" width="433" height="240" alt="Yah's Cuisine Logo"></a>
 	</logo>	
-	<article class="grid_12">
-	<section class="grid_12">
+	<article class="grid_12 alpha">
+	<section class="grid_12 alpha">
 	<h1>Menu</h1>
 	</section>
 	<article class="grid_6 alpha">
@@ -46,7 +46,7 @@
 	<h3>Bar B Que Potroast</h3>
 	<img src="images/barbQue_potroast.jpg" width="200" height="200" alt="Yah's Cuisine">
 	 <p>Feeds 10- 15 served with your choice of two sides and desert.</p>
-	 <p class="grid_6" alpha><a href="#details">$15.00</a></p>
+	 <p class="grid_6 alpha" ><a href="#details">$15.00</a></p>
 	 </section>
 	 <section class="grid_6 alpha">
 	<h3> Mixed Veggies</h3>
