--- a/menu.html
+++ b/menu.html
@@ -40,19 +40,19 @@
 	<h3> Vegan Ribtips</h3>
 	<img src="images/Vegan_ribtips.jpg" width="200" height="200" alt="Yah's Cuisine">
 	 <p>Feeds 10- 15 served with your choice of two sides and desert.</p>
-	 <p class="grid_6 alpha"><a href="#details">$15.00</a></p>
+	 <p><a href="#details">$15.00</a></p>
 	 </section>
 	 <section class="grid_6 alpha">
 	<h3>Bar B Que Potroast</h3>
 	<img src="images/barbQue_potroast.jpg" width="200" height="200" alt="Yah's Cuisine">
 	 <p>Feeds 10- 15 served with your choice of two sides and desert.</p>
-	 <p class="grid_6 alpha" ><a href="#details">$15.00</a></p>
+	 <p><a href="#details">$15.00</a></p>
 	 </section>
 	 <section class="grid_6 alpha">
 	<h3> Mixed Veggies</h3>
 	<img src="images/mixed_veggies.jpg" width="200" height="200" alt="Yah's Cuisine">
 	<p>Feeds 10-15 people served with desert.</p>
-	 <p class="grid_6 alpha"><a href="#details">$15.00</a></p>
+	 <p><a href="#details">$15.00</a></p>
 	 </section>
 	 </article>
 	 <article class="grid_6 omega">
@@ -60,7 +60,7 @@
 	<h3> Cutlet and Kale</h3>
 	<img src="images/Cutlet.jpg" width="200" height="200" alt="Yah's Cuisine"> 
 	<p>Served with your choice of two sides and a biscuit.</p>
-	 <p class="grid_6 omega"><a href="#details">$15.00</a></p>
+	 <p><a href="#details">$15.00</a></p>
 	 </section>
 	 <section class="grid_6 omega">
 	<h3>Blackbean Flatbread Sandwich</h3>
