--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	We contribute to the well-being and health of all humanity by providing wholesome, Vegan, organic all natural foods & alkaline water (oxygenated) to enhance holistic healing/living.We strive to make human life and effects on the earth and its inhabitants more healthy positive and Renewing.
 	<br>We encourage affordable social outlets where healthier foods are affordable and accessible in all communities.We encourage the involvement of our entire human family in order to create healthy balance amongst all.
     Yah's Cuisine offers a variety of Delicious Healthy & Affordable World inspired Vegan Soul food. Yahs cuisine is carefully prepared with Alkaline water, Herbal Ingredients, Minerals & Natural food Vitamins
+		<br> <img src="images/weekend_stash.jpg" width="200" height="200"> <br>
 	</p>
 	</section>
 	<section class="grid_12">
