background color mobile
background color mobile

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 	<p> 
 	We contribute to the well-being and health of all humanity by providing wholesome, Vegan, organic all natural foods & alkaline water (oxygenated) to enhance holistic healing/living.We strive to make human life and effects on the earth and its inhabitants more healthy positive and Renewing.
 	<br>We encourage affordable social outlets where healthier foods are affordable and accessible in all communities.We encourage the involvement of our entire human family in order to create healthy balance amongst all.
-    Yah's Cuisine offers a variety of Delicious Healthy & Affordable World inspired Vegan Soul food. Yahs cuisine is carefully prepared with Alkaline water, Herbal Ingredients, Minerals & Natural food Vitamins
-		<br><center> <img src="images/MangoCake.jpg" alt="mango cake" width="200" height="200"> <img src="images/Veggie_burger.jpg" alt="Veggie Burger" width="150" height="150"> <img src="images/cornbread.jpg" alt="Corn Bread" width="200" height="200"></center><br>
+    Yah's Cuisine offers a variety of Delicious Healthy & Affordable World inspired Vegan Soul food. Yahs cuisine is carefully prepared with Alkaline water, Herbal Ingredients, Minerals & Natural food Vitamins.
+		<br><center><img src="images/MangoCake.jpg" alt="mango cake" width="200" height="200"> <img src="images/Veggie_burger.jpg" alt="Veggie Burger" width="150" height="150"> <img src="images/cornbread.jpg" alt="Corn Bread" width="200" height="200"></center><br>
 	</p>
 	</section>
 	<section class="grid_12">
