grid for text area
grid for text area

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         </div>
         <div>
         <label for="message">Message</label>
-        <textarea rows="15" cols="50" name="message" id="mesage"></textarea>
+        <textarea class="grid_4 omega" rows="15" cols="50" name="message" id="mesage"></textarea>
         </div>
         <div>
         <input type="checkbox" name="contact_phone" id="contact_phone">
