--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
  			   Sunday	12:00–7:00 p.m.<br>
  			</p>
             </section>
-	  <section class="grid_6 omega">
+	  	<section class="grid_6 omega">
         <h3> Contact Form</h3>
         <form action="mailto:me@yahscuisine.com" autocomplete="on">
         First Name:<input type="text name="name_first"><br>
@@ -58,10 +58,10 @@
         Phone Number:<input type="text name="phone" id="phone"><br>
         Email Address:<input type="text name="e-mail" id="email"><br>
         <div>
-        <label for="regarding">Regarding</label>
+        <label class="grid_6 omega" for="regarding">Regarding</label>
         </div>
         <div>
-        <select name="regarding" id="regarding">
+        <select class="grid_6 omega" name="regarding" id="regarding">
         <option>General Inquiry</option>
         <option>Catering Inquiry</option>
         <option>Menu Inquiry</option>
@@ -70,14 +70,14 @@
         </select>
         </div>
         <div>
-        <label for="message">Message</label>
+        <label class="grid_6 omega" for="message">Message</label>
         <textarea class="grid_6 omega" rows="15" cols="35" name="message" id="mesage"></textarea>
         </div>
         <div>
         <input type="checkbox" name="contact_phone" id="contact_phone">
         <p>I prefer to be contacted by phone</p>
         </div>
-        <div id="submit">
+        <div id="submit" class="grid_6">
         <input type="submit" name="submit" value="send">
         <div>
         </div>
