--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,10 @@
         Phone Number:<input type="text name="phone" id="phone"><br>
         Email Address:<input type="text name="e-mail" id="email"><br>
         <div>
-        <label class="grid_6 omega" for="regarding">Regarding</label>
+        <label for="regarding">Regarding</label>
         </div>
         <div>
-        <select class="grid_6 omega" name="regarding" id="regarding">
+        <select name="regarding" id="regarding">
         <option>General Inquiry</option>
         <option>Catering Inquiry</option>
         <option>Menu Inquiry</option>
@@ -69,8 +69,8 @@
         <option>Press</option>
         </select>
         </div>
-        <div>
-        <label class="grid_6 omega" for="message">Message</label>
+        <div class="grid_6 omega">
+        <label for="message">Message</label>
         <textarea class="grid_6 omega" rows="15" cols="35" name="message" id="mesage"></textarea>
         </div>
         <div>
@@ -81,7 +81,7 @@
         <input type="submit" name="submit" value="send">
         <div>
         </div>
-	</p>
+	  </p>
 	</section>
 	</article>
 	<footer class="grid_12"> &copy; Yah's Cuisine FrameWork Assignment 2013</footer>
