added green juice
added green juice

--- a/shop.html
+++ b/shop.html
@@ -83,7 +83,8 @@
 	</article>
 	<section class="grid_6 omega">
 	<h3> Weekend Stash</h3>
-	<p> <img src="images/weekend_stash.jpg" width="200" height="200"> An assortment of our favorites plus desert
+	<p><img src="images/weekend_stash.jpg" alt="weekend stash" width="200" height="200">
+	<img src="images/MangoCake.jpg" alt="mango cake" width="200" height="200"> An assortment of our favorites plus desert
 	and a health tonic of your choice. Feeds 10- 15 people for two days. </p>
 	<p id="omegaprice"><a href="#details">$50.00</a></p>
 	</section>
