--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
 	<p> <img src="images/coconut.jpg" width="300" height="200" alt="Yah's Cuisine">1.Cooking Oil Substitute 2.Insect Repellent 3.Deodorant 4.Makeup Remover 5.Toothpaste 6.Lip Balm 7.Dandruff Relief 8.Coffee Creamer 9.Butter substitute
 	10. Moisturizer
 	</p>
-	<p><a href="coconutoil">Read More</a></p>
+	<p><a href="coconutoil.html">Read More</a></p>
 	 </section>
 	 <section class="grid_12">
 	<h3>Try Tumeric for healthy glowing flawless skin</h3>
