additonal page links added
additonal page links added

--- a/kale.html
+++ b/kale.html
@@ -58,7 +58,7 @@
 	Natural treatments for skin that give lasting results are often better than expensive commercial products and cosmetic procedures. 
 	One such natural treatment is turmeric powder for skin.
 	</p>
-	<p><a href="tumeric.html">Read More</a></p>
+	<p><a href="#details">Read More</a></p>
 	 </section>
 	 <section class="grid_12">
 	<h3>Try this for a morning pick me up</h3>
@@ -71,7 +71,7 @@
 	from a fresh, organic root, and steep it in boiling water for 5-10 minutes. If I am running really low, I’ll chew the slices afterward, too. If you tend to run hot or have a metabolic disorder, please be careful. 
 	A tiny amount of ginger is all any of us needs to get the energy boost we’re after: You really can get too much of a good thing when it comes to ginger.
 	</p>
-	<p><a href="morningtea.html">Read More</a></p>
+	<p><a href="#details">Read More</a></p>
 	 </section>
 	 <section class="grid_12">
 	<h3>20 foods that kick cancers butt</h3>
@@ -79,7 +79,7 @@
 	13.Swiss chard 14.Blueberries 15.Blackberries 16.Raspberries 17.Strawberries 18.Cranberries 19.Red grapes 20.Tomatoes
 
 	</p>
-	<p id="details"><a href="kale.html">Read More</a></p>
+	<p id="details"><a href="#details">Read More</a></p>
 	</section>
 	</article>
 	<section class="grid_12">
