--- a/contact.html
+++ b/contact.html
@@ -37,19 +37,45 @@
 	<h1>Contact Us</h1>
 	<section class="grid_6 alpha">
 		<p id="contact"><img src="images/yahs.jpg" alt="Yah's Cuisine"></p>
-		<p><br>Address: 2347 E 75th St<br>
-		       City: Chicago, IL 60649<br>
-			   Phone:(773) 359-7988<br>
-			   Hours: <br>
-			   Monday	Closed<br>
-			   Tuesday	12:00–7:00 p.m.<br>
-			   Wednesday12:00–7:00 p.m.<br>
-			   Thursday	12:00–7:00 p.m.<br>
-			   Friday	12:00–7:00 p.m.<br>
-			   Saturday	12:00–7:00 p.m.<br>
- 			   Sunday	12:00–7:00 p.m.<br>
- 			</p>
-            </section>
+		
+		<div id="hours" class="grid_6 alpha">
+<ul>
+<li>
+Address: 2347 E 75th St
+</li>
+<li>
+  City: Chicago, IL 60649
+</li>
+<li>
+Hours: 
+</li>
+<li>
+  Monday	Closed<br>
+</li>
+<li>
+ Tuesday	12:00–7:00 p.m.
+</li>
+<li>
+Wednesday  12:00–7:00 p.m
+</li>
+<li>
+Thursday	12:00–7:00 p.m.
+</li>
+<li>
+ Friday		12:00–7:00 p.m.
+</li>
+<li>
+ Friday		12:00–7:00 p.m.
+</li>
+<li>
+Saturday	12:00–7:00 p.m.
+</li>
+<li>
+Sunday	12:00–7:00 p.m.
+</li>
+</ul>
+</div>
+ </section>
 	  	<section class="grid_6 omega">
         <h3> Contact Form</h3>
         <form action="mailto:me@yahscuisine.com" autocomplete="on">
