--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,10 @@ Address: 2347 E 75th St
   City: Chicago, IL 60649
 </li>
 <li>
-Hours: 
+Hours: <br>
 </li>
 <li>
-  Monday	Closed<br>
+  Monday	Closed
 </li>
 <li>
  Tuesday	12:00–7:00 p.m.
