--- a/event copy.html
+++ b/event copy.html
@@ -42,7 +42,7 @@
 	You may drop off your toys here in the store and all toys will be sent to WGN-TV is located at 2501 W. Bradley Place, 
 	Chicago, IL 60618. Please help us make Christmas brighter for the youth.
 	</p>
-	<p class="grid_3"><a href="toydrive.html">Event Details</a></p>
+	<p class="grid_3"><a href="#details">Event Details</a></p>
 	</section>
 	<section class="grid_12">
 	<h3> January Vegan Workshop</h3>
