--- a/wellness_checkup.html
+++ b/wellness_checkup.html
@@ -42,7 +42,13 @@
 	“The Healthiest City in the U.S.”  The City of Chicago works with community partners, internal departments to promote health, prevent disease, reduce environmental 
 	hazards and insure access to health care for all Chicagoans.
 	</p>
-    <p class="grid_3"><a href="#details">Event Details</a></p>
+   </section>
+	</article>
+	<section class="grid_12">
+	<h3>Social Networks</h3>
+	<p><A href="https://www.facebook.com/pages/Yahs-Cuisine-Vegan-Soul-Food/"><img src="images/facebook.png" width="40" height="40" alt="Like Our facebook page"></A>
+	<A href="http://www.twitter.com/"><img src="images/twitter.png" width="40" height="40" alt="follow us on Twitter"></a>
+	<A href="http://www.linkedin.com/"><img src="images/linkedin.png" width="45" height="45" alt="follow us on linked In"></a>
 	</section>
 	</article>
 	<footer class="grid_12"> &copy; Yah's Cuisine FrameWork Assignment 2013</footer>
