contact text area
contact text area

--- a/contact.html
+++ b/contact.html
@@ -98,13 +98,13 @@ Sunday	12:00–7:00 p.m.
         </div>
         <div class="grid_6 omega">
         <label for="message">Message</label>
-        <textarea class="grid_5 omega" rows="15" cols="35" name="message" id="mesage"></textarea>
+        <textarea class="grid_5 omega" rows="15" cols="30" name="message" id="message"></textarea>
         </div>
         <div>
         <input type="checkbox" name="contact_phone" id="contact_phone">
         <p>I prefer to be contacted by phone</p>
         </div>
-        <div id="submit" class="grid_6">
+        <div id="submit" class="grid_5">
         <input type="submit" name="submit" value="send">
         <div>
         </div>
