--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
 		<p id="contact"><img src="images/yahs.jpg" alt="Yah's Cuisine"></p>
 		
 		<div id="hours" class="grid_6 alpha">
+		<nav>
 <ul>
 <li>
 Address: 2347 E 75th St
@@ -74,6 +75,7 @@ Saturday	12:00–7:00 p.m.
 Sunday	12:00–7:00 p.m.
 </li>
 </ul>
+</nav>
 </div>
  </section>
 	  	<section class="grid_6 omega">
